improvements to the paper

--- a/doc/sanaPaper/sana.tex
+++ b/doc/sanaPaper/sana.tex
@@ -3,7 +3,7 @@
 % todo
 
 % adapt conclusions about graphlet-based WEC being better than S3 and EC
-% section comparison with additional methods
+%section comparison with additional methods
 % compile from ubuntu
 
 % todo -- MAyBE
@@ -401,11 +401,11 @@ In Figure~\ref{fig:lgraalobjfuncomparison} we compare L-GRAAL's alignment strate
 
 \subsection{Biological comparison}\label{bio}
 
-In the section we evaluate the methods' ability to find alignments that score well in both topology and sequence. It has previously been shown that using sequence information alone to align pairs of nodes in different species produces alignments that have very low topological quality (comparable to random alignments), but that using graphlet-based topological information alone can recover significant biological information~\citep{GRAAL}. Since then it has also been shown that using both types of information can produce alignments that score reasonably well in both the topological and biological sense. However, balancing the two is not as simple as setting $\alpha=0.5$ in Equation~\ref{eq:alpha} if the topological measure and sequence have different plausible ranges of scores. For instance, when SANA optimizes EC aligning RNorvegicus and Spombe, it obtains a EC score of 0.69 (Figure~\ref{fig:biogrid_alpha0}). However, when SANA optimizes sequence on the same pair of networks, it obtains a Sequence score of 0.057 (Figure~\ref{fig:biogrid_beta0,5}). This means that using $0.5T(a) + 0.5S(a)$ does not ``balance'' the two, because sequence scores are under-weighted due to their low value; a relatively small increase in EC would compensate for a large drop in Sequence.
+In the section we evaluate the methods' ability to find alignments that score well in both topology and sequence. It has previously been shown that using sequence information alone to align pairs of nodes in different species produces alignments that have very low topological quality (comparable to random alignments), but that using graphlet-based topological information alone can recover significant biological information~\citep{GRAAL}. Since then it has also been shown that using both types of information can produce alignments that score reasonably well in both the topological and biological sense. However, balancing the two is not as simple as setting $\alpha=0.5$ in Equation~\ref{eq:alpha} if the topological measure and sequence have different plausible ranges of scores. For instance, when SANA optimizes EC aligning \textit{RNorvegicus} and \textit{SPombe}, it obtains a EC score of 0.69 (Figure~\ref{fig:biogrid_alpha0}). However, when SANA optimizes sequence on the same pair of networks, it obtains a Sequence score of 0.057 (Figure~\ref{fig:biogrid_beta0,5}). This means that using $0.5T(a) + 0.5S(a)$ does not ``balance'' the two, because sequence scores are under-weighted due to their low value; a relatively small increase in EC would compensate for a large drop in Sequence.
 
 For this reason, we introduce a new balancing parameter called $\beta$ that accounts for differences between expected topological and sequence scores. For instance, $\beta=0.5$ means that topology and sequence are optimized at equal parts. Given a certain $\beta$, we can compute the $\alpha$ that achieves the corresponding balance as
 $$\alpha = \frac{\beta\cdot S_{top}}{(1-\beta)\cdot S_{seq}+\beta\cdot S_{top}}$$
-where $S_{top}$ is the score of the method using $\alpha=0$, and $S_{seq}$ is the score of the method using $\alpha=1$, i.e.\ optimizing only sequence\footnote{HubAlign does not work properly when optimizing Sequence exclusively, so for this method we used $\alpha=0.9999$ to compute $S_{seq}$.}. Since $S_{top}$ and $S_{seq}$ vary as a function of the input networks, we compute a different $\alpha$ for each method and for each network pair. For instance, in the previous example of SANA-EC and RNorvegicus and SPombe, $\beta=0.5$ yields $\alpha=0.92$.
+where $S_{top}$ is the score of the method using $\alpha=0$, and $S_{seq}$ is the score of the method using $\alpha=1$, i.e.\ optimizing only sequence\footnote{HubAlign does not work properly when optimizing Sequence exclusively, so for this method we used $\alpha=0.9999$ to compute $S_{seq}$.}. Since $S_{top}$ and $S_{seq}$ vary as a function of the input networks, we compute a different $\alpha$ for each method and for each network pair. For instance, in the previous example of SANA-EC and \textit{RNorvegicus} and \textit{SPombe}, $\beta=0.5$ yields $\alpha=0.92$.
 
 In Figure~\ref{fig:biogrid_beta0,5} we see the topological scores of the methods in inter-species alignments when setting $\beta=0.5$. SANA-LG, HubAlign and L-GRAAL get similar results, except in LCCS, where SANA-LG is generally worse (see discussion below). As expected, SANA-EC and SANA-S3 dominate in their respective objective functions.
 
