SAGA replaced with SANA
Former-commit-id: 95c215d038ae0c242327e35feb6b72f7afd5afa0

--- a/doc/sanaPaper/Bibliography.bib
+++ b/doc/sanaPaper/Bibliography.bib
@@ -322,10 +322,10 @@ HubAlign
     year = {2014}
 }
 
-SAGA
-@ARTICLE{SAGA,
+SANA
+@ARTICLE{SANA,
    author = {{Mamano}, N. and {Hayes}, W.},
-    title = "{SAGA: Simulated Annealing Graph Alignment Applied to Biological Networks}",
+    title = "{SANA: Simulated Annealing Network Alignment Applied to Biological Networks}",
   journal = {Submitted for review to Bioinformatics},
     year = 2015,
     month = jul,
