--- a/doc/userManual/userManual.tex
+++ b/doc/userManual/userManual.tex
@@ -4,7 +4,7 @@
 \usepackage[normalem]{ulem}
 
 %opening
-\title{SAGA software}
+\title{SANA software}
 \author{Nil Mamano}
 
 \begin{document}
@@ -12,27 +12,27 @@
 \maketitle
 
 
-\part{SAGA User Manual} % Main appendix title
+\part{SANA User Manual} % Main appendix title
 
-SAGA was developed in a Linux environment (Ubuntu 14.04) and it has only been tested in this environment.
+SANA was developed in a Linux environment (Ubuntu 14.04) and it has only been tested in this environment.
 
-The source code is ``conscious'' of the folder structure, so \textbf{it is important that files are in the expected locations and with the expected names}. While this approach is less flexible, it simplifies things for the user, since during a typical execution SAGA may interact with many files, and it would not be practical to specify all of them as arguments.
+The source code is ``conscious'' of the folder structure, so \textbf{it is important that files are in the expected locations and with the expected names}. While this approach is less flexible, it simplifies things for the user, since during a typical execution SANA may interact with many files, and it would not be practical to specify all of them as arguments.
 
 We call the ``root'' folder of the project the one containing the Makefile. File paths within this document, such as \texttt{src/main.cpp}, are relative to the root folder of the project.
 
-This document is not self-contained. Many concepts are described in the SAGA Paper, the Thesis, or the Temperature Schedule Report.
+This document is not self-contained. Many concepts are described in the SANA Paper, the Thesis, or the Temperature Schedule Report.
 
-Through this document, ``SAGA'' might refer to two different things: the SAGA method in particular, or the whole program, which includes many other things (and other methods).
+Through this document, ``SANA'' might refer to two different things: the SANA method in particular, or the whole program, which includes many other things (and other methods).
 
 \section{Obtaining biological data}\label{b:obtainbio}
 
-Sequence and GO term data should be downloaded and placed in the locations expected by SAGA prior to running it.
+Sequence and GO term data should be downloaded and placed in the locations expected by SANA prior to running it.
 
 \subsection{GO terms}\label{b:goterms}
 Evaluating GO term based measures, such as GO coverage, requires having Gene Ontology data for each specie, i.e., the list saying which GO terms each protein has. Different datasets use different formats:
 \begin{itemize}
 \item Noisy yeast dataset: The networks from this dataset do not have GO term data, as the dataset is only used to evaluate topology.
-\item BioGRID dataset: There is a single file containing the GO terms of every network in this dataset. It can be downloaded here: \url{ftp.ncbi.nlm.nih.gov/gene/DATA/gene2go.gz} (17MB). SAGA expects it to be stored as \texttt{go/gene2go}.
+\item BioGRID dataset: There is a single file containing the GO terms of every network in this dataset. It can be downloaded here: \url{ftp.ncbi.nlm.nih.gov/gene/DATA/gene2go.gz} (17MB). SANA expects it to be stored as \texttt{go/gene2go}.
 \item Yeast and Human dataset: each of these networks has its own file with the GO terms of their proteins. They are already in the project, as\\ \texttt{networks/human/go/human\_gene\_association.txt} and\\ \texttt{networks/yeast/go/yeast\_gene\_association.txt}, so they don't need to be downloaded. The original files are in \url{http://www.geneontology.org/gene-associations/submission/gene_association.goa_human.gz} (6.2MB) and \url{http://www.geneontology.org/gene-associations/submission/gene_association.sgd.gz} (1.2MB).
 \end{itemize}
 
@@ -44,7 +44,7 @@ We have uploaded the sequence alignment scores directly. They can be downloaded 
 Next, we explain the way to generate the scores yourself (not recommended; you can skip to next section). The way to download sequences depends on the dataset:
 \begin{itemize}
 \item Noisy yeast dataset: The networks from this dataset do not have sequence data, as the dataset is only used to evaluate topology.
-\item BioGRID dataset: Given a network file using the protein identifiers from the BioGRID database, the script \texttt{sequence/PPI\_get\_FASTA.py} queries the BioGRID database for the sequences of the proteins. It has two arguments: (i) the network file; (ii) the output file. The script \texttt{sequence/get\_all\_FASTA.sh} downloads the sequences of all the proteins at the same time, using the \texttt{PPI\_get\_FASTA.py} script. It should be run as \texttt{./get\_all\_FASTA.sh} from the \texttt{sequence} folder. SAGA expects the output files to be stored at \texttt{networks/name/sequence/name.fasta}, where \texttt{name} is one of the names of the BioGRID dataset networks. The script \texttt{get\_all\_FASTA.sh} stores the output files this way, so you just need to run this script.
+\item BioGRID dataset: Given a network file using the protein identifiers from the BioGRID database, the script \texttt{sequence/PPI\_get\_FASTA.py} queries the BioGRID database for the sequences of the proteins. It has two arguments: (i) the network file; (ii) the output file. The script \texttt{sequence/get\_all\_FASTA.sh} downloads the sequences of all the proteins at the same time, using the \texttt{PPI\_get\_FASTA.py} script. It should be run as \texttt{./get\_all\_FASTA.sh} from the \texttt{sequence} folder. SANA expects the output files to be stored at \texttt{networks/name/sequence/name.fasta}, where \texttt{name} is one of the names of the BioGRID dataset networks. The script \texttt{get\_all\_FASTA.sh} stores the output files this way, so you just need to run this script.
 \item Yeast and Human dataset: the files with the sequences already come with the project. They are \texttt{networks/yeast/sequence/yeast\_curated.fasta} and\\ \texttt{networks/human/sequence/human\_curated.fasta}.
 \end{itemize}
 
@@ -57,16 +57,16 @@ The project folder contains the following elements:
 \begin{itemize}
 \item\verb|Makefile|: Makefile to build the project. It can be used as follows:
 \begin{itemize}
-\item\verb|make|: builds the SAGA software. The output executable is called \verb|saga|.
-\item\verb|make clear_cache|: removes files auto-generated by SAGA. 
-\item\verb|make clean|: removes files auto-generated by SAGA as well as object (\verb|.o|) files and the \verb|saga| executable.
+\item\verb|make|: builds the SANA software. The output executable is called \verb|saga|.
+\item\verb|make clear_cache|: removes files auto-generated by SANA. 
+\item\verb|make clean|: removes files auto-generated by SANA as well as object (\verb|.o|) files and the \verb|saga| executable.
 \end{itemize}
-\item\verb|src/|: the source code of SAGA.
-\item\verb|networks/|: the networks from the datasets used in the paper. It should contain one folder for each network, with the network file in ``\href{http://www.algorithmic-solutions.info/leda_manual/gw.html}{GraphWin}'' (\verb'.gw') format. The name of the folder and the network should match. For instance, \verb|networks/yeast/yeast.gw|. SAGA will create a subfolder\\ \verb|networks/yeast/autogenerated/| to store data from this network, such as its distance matrix or its graphlet degree vectors.
-\item\verb|alignments/|: the alignments generated by SAGA. SAGA has an argument to specify the name of the output file containing the generated alignment. In absence of this argument, SAGA gives a relevant name to the output file and stores it in this folder. For instance,\\ \verb|alignments/yeast_human/yeast_human_SAGA_EC_480.txt|.
+\item\verb|src/|: the source code of SANA.
+\item\verb|networks/|: the networks from the datasets used in the paper. It should contain one folder for each network, with the network file in ``\href{http://www.algorithmic-solutions.info/leda_manual/gw.html}{GraphWin}'' (\verb'.gw') format. The name of the folder and the network should match. For instance, \verb|networks/yeast/yeast.gw|. SANA will create a subfolder\\ \verb|networks/yeast/autogenerated/| to store data from this network, such as its distance matrix or its graphlet degree vectors.
+\item\verb|alignments/|: the alignments generated by SANA. SANA has an argument to specify the name of the output file containing the generated alignment. In absence of this argument, SANA gives a relevant name to the output file and stores it in this folder. For instance,\\ \verb|alignments/yeast_human/yeast_human_SANA_EC_480.txt|.
 \item\verb|LGRAAL/|: the LGRAAL software.
 \item\verb|HubAlign/|: the HubAlign software.
-\item\verb|go/|: this folder contains Gene Ontology data. Moreover, it contains three scripts used internally by SAGA to evaluate the Go Average measure: \texttt{itgom.py}, \texttt{pairwise.py}, and \texttt{protein\_pair\_sim.py}. Moreover, it should contain the file \texttt{gene2go} (see section~\ref{b:goterms}).
+\item\verb|go/|: this folder contains Gene Ontology data. Moreover, it contains three scripts used internally by SANA to evaluate the Go Average measure: \texttt{itgom.py}, \texttt{pairwise.py}, and \texttt{protein\_pair\_sim.py}. Moreover, it should contain the file \texttt{gene2go} (see section~\ref{b:goterms}).
 \item\verb|sequence/|: this folder contains sequence data. It contains the following files and folders:
 \begin{itemize}
 \item \texttt{PPI\_get\_FASTA.py}: A python script to download proteins sequences (see section~\ref{b:sequence}).
@@ -74,15 +74,15 @@ The project folder contains the following elements:
 \item\texttt{run\_blast.sh}: A bash script to run BLAST.
 \item\texttt{blast/}: the BLAST software.
 \item\texttt{scores/}: output of BLAST for each pair of networks.
-\item\texttt{bitscores/}: folder auto-generated by SAGA.
+\item\texttt{bitscores/}: folder auto-generated by SANA.
 \end{itemize}
-\item\verb|matrices/|: auxiliary folder that SAGA creates to store similarity matrices among species.
-\item\verb|tmp/|: auxiliary folder where SAGA stores temporary files, such as intermediate inputs and outputs of the scripts.
+\item\verb|matrices/|: auxiliary folder that SANA creates to store similarity matrices among species.
+\item\verb|tmp/|: auxiliary folder where SANA stores temporary files, such as intermediate inputs and outputs of the scripts.
 \end{itemize}
 \section{Compiling and executing}
-To compile, do \texttt{make} from the root project directory. To execute, do \texttt{./saga} from the same folder, followed by the arguments (see section~\ref{b:args}). Note that prior to running SAGA, you should obtain the necessary biological data (see section~\ref{b:obtainbio}). The first time you run SAGA with a new pair of networks, there will be a big overhead in the beginning because SAGA will have to compute a lot of data in order to be able to evaluate all the measures. This data is stored for posterior runs.
+To compile, do \texttt{make} from the root project directory. To execute, do \texttt{./saga} from the same folder, followed by the arguments (see section~\ref{b:args}). Note that prior to running SANA, you should obtain the necessary biological data (see section~\ref{b:obtainbio}). The first time you run SANA with a new pair of networks, there will be a big overhead in the beginning because SANA will have to compute a lot of data in order to be able to evaluate all the measures. This data is stored for posterior runs.
 
-During the execution of simulated annealing, SAGA gives feedback about the progress of the alignment. The log looks something like this:
+During the execution of simulated annealing, SANA gives feedback about the progress of the alignment. The log looks something like this:
 \begin{verbatim}
 ...
 12 (23.106s): score = 0.00913156 P = 0.00687286
@@ -93,10 +93,10 @@ During the execution of simulated annealing, SAGA gives feedback about the progr
 \end{verbatim}
 It shows, from left to right: the iteration divided by the $N$ parameter of the restart schedule (by default, $10^7$), the execution time, the score of the objective function, and the current probability to accept a worse solution with a typical energy increment for this pair of networks and objective function.
  
-SAGA outputs the alignment in a file. The first row contains the alignment itself, in a format that SAGA understands. This way, it can be used as starting alignment for a different execution of SAGA. The remaining of the file contains a report: the details of the networks, the method used to create it, the parameters used, the scores of all the measures, and the largest connected components of the common subgraph.
+SANA outputs the alignment in a file. The first row contains the alignment itself, in a format that SANA understands. This way, it can be used as starting alignment for a different execution of SANA. The remaining of the file contains a report: the details of the networks, the method used to create it, the parameters used, the scores of all the measures, and the largest connected components of the common subgraph.
 
 
-\section{SAGA arguments}\label{b:args}
+\section{SANA arguments}\label{b:args}
 There are optional arguments and mandatory arguments. The mandatory arguments have default values, which can be seen (and edited) in \texttt{src/default.cnf}. The basic syntax is \texttt{./saga arg1 value1 arg2 value2 ...} The order of the arguments is not important. If an argument appears more than once, the last value is the only one that counts. All the arguments start with \texttt{-} and are all in lowercase (e.g., \texttt{-method}). There are four kinds of arguments, according to the type of value that they expect.
 \begin{itemize}
 \item String arguments: the value is a string. For instance, \texttt{-g1 yeast}
@@ -114,18 +114,18 @@ Next, we show the list of arguments\footnote{Some arguments for advanced functio
 \subsubsection*{Method}
 \begin{itemize}
 \item\texttt{-method saga} (string): its possible values are \texttt{lgraal}, \texttt{hubalign}, \texttt{saga}, \texttt{wave}, \texttt{random}, \texttt{none} and \texttt{hc}.
-\item\texttt{-t 1} (double): maximum execution time for SAGA and L-GRAAL, in minutes. If during the execution of SAGA you input \texttt{Control+C}, the program will ask if you want to save the alignment as it is. 
+\item\texttt{-t 1} (double): maximum execution time for SANA and L-GRAAL, in minutes. If during the execution of SANA you input \texttt{Control+C}, the program will ask if you want to save the alignment as it is. 
 \item\texttt{-alpha 0} (double): balance between topology and sequence similarity in the objective function of L-GRAAL and HubAlign.
 \end{itemize}
 \subsubsection*{Temperature schedule}
 \begin{itemize}
 \item\texttt{-k 1} (double): $k$ parameter of the temperature schedule, scaled by $2.5\cdot 10^{4}$. It can receive a special value: \texttt{auto}. In that case the parameter is set automatically.
 \item\texttt{-l 1} (double): $\lambda$ parameter of the temperature schedule, scaled by $10^8$. It can receive a special value: \texttt{auto}. In that case the parameter is set automatically.
-\item\texttt{-startalignment} (string): file containing the starting alignment (in the format outputted by SAGA). Some methods allow this option, while the rest start with random alignments. It is not implemented in SAGA, although it could be done.
+\item\texttt{-startalignment} (string): file containing the starting alignment (in the format outputted by SANA). Some methods allow this option, while the rest start with random alignments. It is not implemented in SANA, although it could be done.
 \end{itemize}
 \subsubsection*{Restart scheme}
 \begin{itemize}
-\item\texttt{-restart} (bool): active the restart scheme in SAGA.
+\item\texttt{-restart} (bool): active the restart scheme in SANA.
 \item\texttt{-tnew 3} (double): parameter $t_1$ of the restart scheme, in minutes.
 \item\texttt{-iterperstep 10000000} (double): parameter $N$ of the restart scheme.
 \item\texttt{-numcand 3} (double): parameter $K$ of the restart scheme.
@@ -133,7 +133,7 @@ Next, we show the list of arguments\footnote{Some arguments for advanced functio
 \item\texttt{-tfin 3} (double): parameter $t_3$ of the restart scheme, in minutes.
 \end{itemize}
 \subsubsection*{Objective function}
-In SAGA, the objective function can be any weighted combination of measures among EC, S3, WEC, and any local measures. Each measure can have a weight. If the sum of the different weights is not 1, they are scaled accordingly.
+In SANA, the objective function can be any weighted combination of measures among EC, S3, WEC, and any local measures. Each measure can have a weight. If the sum of the different weights is not 1, they are scaled accordingly.
 
 \begin{itemize}
 \item\texttt{-ec 1} (double): weight of EC.
@@ -144,7 +144,7 @@ In SAGA, the objective function can be any weighted combination of measures amon
 \item\texttt{-edgec 0} (double): weight of Edge density.
 \item\texttt{-importance 0} (double): weight of Importance.
 \item\texttt{-wec 0} (double): weight of WEC.
-\item\texttt{-sequence 0} (double): weight of Sequence similarity (in SAGA, the contribution of Sequence similarity is tuned through the \texttt{-alpha} argument, not this).
+\item\texttt{-sequence 0} (double): weight of Sequence similarity (in SANA, the contribution of Sequence similarity is tuned through the \texttt{-alpha} argument, not this).
 \item\texttt{-nodecweights 4 0.1 0.25 0.5 0.15} (vector): weights $w$ of the Node density measure. They are automatically scaled to 1.
 \item\texttt{-edgecweights 4 0.1 0.25 0.5 0.15} (vector): weights $w$ of the Edge density measure. They are automatically scaled to 1.
 \item\texttt{-wecnodesim nodec} (string): local measure used to weight the edges in the WEC measure.
@@ -160,7 +160,7 @@ Go Average can only be evaluated with the yeast and human networks, as IT-GOM do
 
 \subsubsection*{Others}
 \begin{itemize}
-\item\texttt{-o} (string): Specifies the output file, relative to the project folder. In its absence, SAGA gives it a relevant name automatically and stores it in the \texttt{alignments} folder (see section~\ref{b:struct}).
+\item\texttt{-o} (string): Specifies the output file, relative to the project folder. In its absence, SANA gives it a relevant name automatically and stores it in the \texttt{alignments} folder (see section~\ref{b:struct}).
 \end{itemize}
 
 \subsection{Examples}
@@ -171,7 +171,7 @@ Go Average can only be evaluated with the yeast and human networks, as IT-GOM do
 
 ./saga
 \end{verbatim}
-Executes SAGA, aligning the \texttt{yeast} and \texttt{human} networks, optimizing EC, for 1 minute.
+Executes SANA, aligning the \texttt{yeast} and \texttt{human} networks, optimizing EC, for 1 minute.
 \item[Slower temperature schedule]
 \begin{verbatim}
 
@@ -252,7 +252,7 @@ Internally, nodes are identified by their index (starting with 0) in the graphWi
 
 
 \subsubsection*{Alignments}
-When SAGA finishes it saves the resulting alignment in the file named with the value of the argument \texttt{-o} (or with an automatically generated name, if this argument is not found). The alignment is contained in the first line. It is a list of $n_1$ numbers between $0$ and $n_2-1$. If the $i$-th number is $j$, it means that the node with index $i$ in $G_1$ maps to the node with index $j$ in $G_2$.
+When SANA finishes it saves the resulting alignment in the file named with the value of the argument \texttt{-o} (or with an automatically generated name, if this argument is not found). The alignment is contained in the first line. It is a list of $n_1$ numbers between $0$ and $n_2-1$. If the $i$-th number is $j$, it means that the node with index $i$ in $G_1$ maps to the node with index $j$ in $G_2$.
 
 The remaining of the file is just a description of the networks, the properties of the alignment (such as scores of different measures), and details about the method used to generate it.
 
@@ -284,7 +284,7 @@ In this section, \texttt{.*pp} means that there is both a header and a source fi
 
 \item \texttt{NormalDistribution.*pp} Statistical functions about a normal distribution.
 
-\item \texttt{computeGraphlets.*pp} An algorithm to compute the graphlet degree vectors of a graph. I did not create this code myself, I just adapted it. It is free software (the license is in the code) so it can't be used in a closed version of SAGA. It is called from the method \texttt{loadGraphletDegreeVectors()} from the \texttt{Graph} class, so it shouldn't require direct manipulation.
+\item \texttt{computeGraphlets.*pp} An algorithm to compute the graphlet degree vectors of a graph. I did not create this code myself, I just adapted it. It is free software (the license is in the code) so it can't be used in a closed version of SANA. It is called from the method \texttt{loadGraphletDegreeVectors()} from the \texttt{Graph} class, so it shouldn't require direct manipulation.
 
 To avoid recomputing the GDVs, the \texttt{Graph} class stores them in \\ \texttt{networks/}\textit{name}\texttt{/autogenerated/}\textit{name}\texttt{\_gdv.bin} (in binary format), where \textit{name} is the name of the graph. When \texttt{loadGraphletDegreeVectors()} is called, first it is checked if the binary file already exists. If it does, it is loaded directly. Otherwise, it is computed and stored.
 
@@ -342,7 +342,7 @@ Its attributes are a name and two graphs. While measures (e.g., EC) ``exist'' in
 
 \item \texttt{Sequence.*pp} Subclass of \texttt{LocalMeasure}. It uses BLAST bit-scores.
 
-In order to initialize its similarity matrix, the BLAST output is necessary. It is expected to be \texttt{sequence/scores/}\textit{g1Name}\texttt{\_}\textit{g2Name}\texttt{\_blast.out}. If it is not found, the program halts. The BLAST output is not generated automatically by SAGA, as it can take hours. Instead, there are some scripts in \texttt{sequence/} to run BLAST and obtain these files (see Section~\ref{b:sequence} for details).
+In order to initialize its similarity matrix, the BLAST output is necessary. It is expected to be \texttt{sequence/scores/}\textit{g1Name}\texttt{\_}\textit{g2Name}\texttt{\_blast.out}. If it is not found, the program halts. The BLAST output is not generated automatically by SANA, as it can take hours. Instead, there are some scripts in \texttt{sequence/} to run BLAST and obtain these files (see Section~\ref{b:sequence} for details).
 
 In the case of the Yeast and Human networks, \texttt{Sequence} has to translate the names of the nodes in the network to the names that appear in the BLAST output files. This translation is used by looking at the \texttt{networks/yeast/sequence/yeast\_curated.fasta} file (analogous for the Human network).
 
@@ -366,37 +366,37 @@ The scripts take very long to finish. The data could be stored to speed the proc
 
 \item \texttt{WeightedEdgeConservation.*pp} Subclass of \texttt{Measure}. Also known as WEC, or Weighted Edge Coverage. The constructor receives a local measure that is used to give weights to the edges.
 
-\item \texttt{MeasureCombination.*pp} This class is like a measure made of a combination of measures. It has a vector of pointers to measures and a corresponding vector of weights. It is used because sometimes it is necessary to iterate through all the measures (for instance, to write all the scores to the report). It is also useful to specify the objective function of SAGA, which is a weighted combination of measures. SAGA receives a \texttt{MeasureCombination} as argument in the constructor.
+\item \texttt{MeasureCombination.*pp} This class is like a measure made of a combination of measures. It has a vector of pointers to measures and a corresponding vector of weights. It is used because sometimes it is necessary to iterate through all the measures (for instance, to write all the scores to the report). It is also useful to specify the objective function of SANA, which is a weighted combination of measures. SANA receives a \texttt{MeasureCombination} as argument in the constructor.
 
 \subsection{Methods}\label{methods}
 
-\item \texttt{Method} Abstract base class (i.e., cannot be instantiated) for all the network alignment methods (such as SAGA). The main method of this class is \texttt{run()}, which must be implemented by the subclasses. This function returns an alignment. The constructor is
+\item \texttt{Method} Abstract base class (i.e., cannot be instantiated) for all the network alignment methods (such as SANA). The main method of this class is \texttt{run()}, which must be implemented by the subclasses. This function returns an alignment. The constructor is
 \begin{verbatim}
 Method(Graph* G1, Graph* G2, string name);
 \end{verbatim}
 Even though the methods ``exist'' independently of the graphs $G_1$ and $G_2$, the constructor requires the graphs so that methods can initialize any data structures needed for \texttt{run()} (analogous to how for measures we want to do any preprocessing necessary for \texttt{eval()} just once, for methods we want to do any preprocessing necessary for \texttt{run()} just once).
 
-There are two other methods that subclasses must implement. The first is \texttt{fileNameSuffix(const Alignment\& A)}. If when running SAGA the argument \texttt{-o} to specify the output file is not supplied, a name is generated automatically:\\
+There are two other methods that subclasses must implement. The first is \texttt{fileNameSuffix(const Alignment\& A)}. If when running SANA the argument \texttt{-o} to specify the output file is not supplied, a name is generated automatically:\\
 \texttt{alignments/}\textit{G1Name}\texttt{\_}\textit{G2Name}\texttt{/}\textit{G1Name}\texttt{\_}\textit{G2Name}\texttt{\_}\textit{method}\texttt{\_}\textit{suffix}\texttt{.txt}\\where \textit{method} is the name of the method, and \textit{suffix} is what \texttt{fileNameSuffix()} returns, and is supposed to give additional information about the details of the alignment. For instance:
 \begin{verbatim}
-yeast_human_SAGA_EC_048.txt
+yeast_human_SANA_EC_048.txt
 yeast_human_LGRAAL_alpha_0.txt
 \end{verbatim}
 Note: if the automatically generated name already exists, a numerical suffix is added automatically.
 
-The other function subclasses of \texttt{Method} must implement is \texttt{describeParameters()}, which should describe the parameters used in this particular execution of the method (for instance, the values of $k$ and $\lambda$ in the case of SAGA). This information is added to the report in the output file.
+The other function subclasses of \texttt{Method} must implement is \texttt{describeParameters()}, which should describe the parameters used in this particular execution of the method (for instance, the values of $k$ and $\lambda$ in the case of SANA). This information is added to the report in the output file.
 
-\item \texttt{SAGA.*pp} Subclass of \texttt{Method}. The code is quite complex because it has many features (incremental evaluation, combination of objective functions, restart scheme, automatic setting of temperature schedule parameters). However, I tried to comment it adequately.
+\item \texttt{SANA.*pp} Subclass of \texttt{Method}. The code is quite complex because it has many features (incremental evaluation, combination of objective functions, restart scheme, automatic setting of temperature schedule parameters). However, I tried to comment it adequately.
 
-By default, SAGA is initialized without restarting scheme. It can be enabled with \texttt{enableRestartingScheme(...)}. Similarly, automatic temperature schedule can be enabled with \texttt{setKAutomatically()} and \texttt{setLAutomatically()}. SAGA sets values of $k$ and $\lambda$ when initialized, but these functions override them.
+By default, SANA is initialized without restarting scheme. It can be enabled with \texttt{enableRestartingScheme(...)}. Similarly, automatic temperature schedule can be enabled with \texttt{setKAutomatically()} and \texttt{setLAutomatically()}. SANA sets values of $k$ and $\lambda$ when initialized, but these functions override them.
 
-Note: although in the paper it is explained that the $\alpha$ parameter controls the weight of Sequence similarity versus topology, in the code there is no explicit $\alpha$ parameter. SAGA has a \texttt{MeasureCombination} attribute which has the weight of each measure in the objective function. The effect of $\alpha$ can be emulated with these weights.
+Note: although in the paper it is explained that the $\alpha$ parameter controls the weight of Sequence similarity versus topology, in the code there is no explicit $\alpha$ parameter. SANA has a \texttt{MeasureCombination} attribute which has the weight of each measure in the objective function. The effect of $\alpha$ can be emulated with these weights.
 
-In order to know what is a ``typical energy increment'' for a particular pair of networks and objective function, SAGA first runs itself with temperature fixed to 0, which is usually quick, and uses this execution to sample energy increments. Hence, when running SAGA, it might seem like it runs twice.
+In order to know what is a ``typical energy increment'' for a particular pair of networks and objective function, SANA first runs itself with temperature fixed to 0, which is usually quick, and uses this execution to sample energy increments. Hence, when running SANA, it might seem like it runs twice.
 
-\item \texttt{HillClimbing.*pp} Subclass of \texttt{Method}. It is very similar to SAGA, but it implements steepest ascent hill-climbing. In other words, it looks at every neighbor at each iteration, and chooses the best, until it can't improve anymore. It is a very slow method.
+\item \texttt{HillClimbing.*pp} Subclass of \texttt{Method}. It is very similar to SANA, but it implements steepest ascent hill-climbing. In other words, it looks at every neighbor at each iteration, and chooses the best, until it can't improve anymore. It is a very slow method.
 
-\item \texttt{HubAlignWrapper.*pp} Subclass of \texttt{Method}. It runs HubAlign, which is expected to be in \texttt{HubAlign/HubAlign} (if it isn't, the program halts). The purpose of this class is to give a uniform interface for running SAGA and HubAlign: HubAlign expects the networks and sequence data in a different format, outputs the alignment in a different format, and requires other several parameters, which the class fixes to the values specified in the paper.
+\item \texttt{HubAlignWrapper.*pp} Subclass of \texttt{Method}. It runs HubAlign, which is expected to be in \texttt{HubAlign/HubAlign} (if it isn't, the program halts). The purpose of this class is to give a uniform interface for running SANA and HubAlign: HubAlign expects the networks and sequence data in a different format, outputs the alignment in a different format, and requires other several parameters, which the class fixes to the values specified in the paper.
 
 Moreover, in HubAlign the $\alpha$ parameter has the opposite meaning as usual (it is the weight of topology, not sequence), although this is accounted for in the \texttt{main.cpp} file.
 
@@ -423,7 +423,7 @@ The main program does the following:
 
 \item The arguments are parsed.
 
-\item If the bool argument \texttt{-qsub} is present, then the execution is sent to the cluster. A small bash script \texttt{tmp/submit.sh} (with a unique suffix if necessary) is created and executed. This script submits SAGA to run in the cluster with exactly the same arguments (except \texttt{-qsub}). Moreover, the \texttt{-qcount} argument allows you to submit it more than once.
+\item If the bool argument \texttt{-qsub} is present, then the execution is sent to the cluster. A small bash script \texttt{tmp/submit.sh} (with a unique suffix if necessary) is created and executed. This script submits SANA to run in the cluster with exactly the same arguments (except \texttt{-qsub}). Moreover, the \texttt{-qcount} argument allows you to submit it more than once.
 
 \item The arguments and their values are printed in the terminal, so that the user can inspect what is being executed.
 
@@ -439,7 +439,7 @@ Note: there are also functions to add and remove edges randomly, but there is no
 
 \item If the bool argument \texttt{-dbg} is found, the execution flow is passed to the function \texttt{dbgMode}. This function does not do anything in particular, it is just used to try things out of the usual. It is not meant for anything permanent, and it is overwritten as needed.
 
-\item The measures are initialized. The first time SAGA is executed, this step takes a long time. The following times, it takes a fraction of the time because most of the data is stored.
+\item The measures are initialized. The first time SANA is executed, this step takes a long time. The following times, it takes a fraction of the time because most of the data is stored.
 
 Some measures are only initialized if certain preconditions are met (for instance, for Importance there must at least exist one node with degree greater than 10 in each network).
 
@@ -488,7 +488,7 @@ Once the new class has been created, in order for it to be evaluated and added t
   M.addMeasure(m);
 \end{verbatim}
 \end{itemize}
-In addition, if you have modified SAGA so that it can optimize that measure (more on that latter) or if it is a local measure (all local measures can be optimized by SAGA by default), and you want SAGA to be able to optimize it, you must do the following:
+In addition, if you have modified SANA so that it can optimize that measure (more on that latter) or if it is a local measure (all local measures can be optimized by SANA by default), and you want SANA to be able to optimize it, you must do the following:
 \begin{itemize}
 \item Add a double argument to the list of arguments (it appears in the start of the file) with the name of the measure, e.g., \texttt{-ec}.
 \item In \texttt{initMeasures(...)}, add it to \texttt{M} with the value of the argument (i.e., the weight):
@@ -517,14 +517,14 @@ Once this is done, you can execute the new method with \texttt{./saga -method na
 
 Note: since $G_1$ and $G_2$ are already protected attributes of \texttt{Method}, it is not necessary for the subclasses to have them as their own attributes.
 
-\subsection{Adding a new objective function to SAGA}
+\subsection{Adding a new objective function to SANA}
 
-You don't need to modify the \texttt{SAGA} class to add a new local measure. The changes described above to the \texttt{main.cpp} file suffice.
+You don't need to modify the \texttt{SANA} class to add a new local measure. The changes described above to the \texttt{main.cpp} file suffice.
 
-For other measures, many more changes are necessary to \texttt{SAGA.hpp} and \texttt{SAGA.cpp}. In the simplest case, you would need to do the following. Let the measure be $x$.
+For other measures, many more changes are necessary to \texttt{SANA.hpp} and \texttt{SANA.cpp}. In the simplest case, you would need to do the following. Let the measure be $x$.
 \begin{enumerate}
-\item Add a private attribute \texttt{xScore} to the \texttt{SAGA} class.
-\item The function \texttt{initDataStructures(const Alignment\& startA)}, which is called prior to starting the iterations of SA, prepares all the data structures necessary to run SAGA starting with the alignment \texttt{startA}. Here, the value of \texttt{xScore} should be initialized, i.e., \texttt{xScore = x.eval(startA)}, where \texttt{x} is an instance of the measure $x$.
+\item Add a private attribute \texttt{xScore} to the \texttt{SANA} class.
+\item The function \texttt{initDataStructures(const Alignment\& startA)}, which is called prior to starting the iterations of SA, prepares all the data structures necessary to run SANA starting with the alignment \texttt{startA}. Here, the value of \texttt{xScore} should be initialized, i.e., \texttt{xScore = x.eval(startA)}, where \texttt{x} is an instance of the measure $x$.
 \item Modify \texttt{performChange()} and \texttt{performSwap()} to compute it incrementally. Both functions follow the same structure, and both require the same additions:
 \begin{enumerate}
 \item The new $x$ score should be computed in a local variable \texttt{xNewScore}.
@@ -536,7 +536,7 @@ newCurrentScore += s3Weight * s3NewScore;
 ...
 newCurrentScore += xWeight * xNewScore;
 \end{verbatim}
-Note that the weight of $x$ can be obtained as \texttt{MC->getWeight("x")}, where \texttt{"x"} is the name of the measure. \emph{MC} is an attribute of SAGA of type \texttt{MeasureCombination} which has the weight of each measure.
+Note that the weight of $x$ can be obtained as \texttt{MC->getWeight("x")}, where \texttt{"x"} is the name of the measure. \emph{MC} is an attribute of SANA of type \texttt{MeasureCombination} which has the weight of each measure.
 \item If (and only if) the new solution is accepted, update \texttt{xScore} and any data structures that are necessary to compute it incrementally. This has to be done inside the following \texttt{if} (it is the same in both \texttt{performChange()} and \texttt{performSwap()}):
 \begin{verbatim}
 if (energyInc >= 0 or randomReal(gen) <= exp(energyInc/T)) {
@@ -571,7 +571,7 @@ Complementary homolog proteins aligned: 0/103 (0%)
 Non-complementary homolog proteins aligned: 0/119 (0%)
 \end{verbatim}
 
-SAGA does not currently have any argument to call these functions. They are called from the \texttt{dbgMode(...)} function using the \texttt{-dbg} argument. For instance, the following code analyses the alignment \texttt{alignment.txt} given in edge-list format.
+SANA does not currently have any argument to call these functions. They are called from the \texttt{dbgMode(...)} function using the \texttt{-dbg} argument. For instance, the following code analyses the alignment \texttt{alignment.txt} given in edge-list format.
 \begin{verbatim}
 void dbgMode(Graph& G1, Graph& G2, ArgumentParser& args) {
   printProteinPairCountInNetworks(false);
@@ -580,7 +580,7 @@ void dbgMode(Graph& G1, Graph& G2, ArgumentParser& args) {
   exit(0);
 }
 \end{verbatim}
-SAGA should be run as \texttt{./saga -dbg -g1 yeast -g2 human}. If \texttt{alignment.txt} were an alignment between SCerevisiae and HSapiens, then SAGA should be run as \texttt{./saga -dbg -g1 SCerevisiae -g2 HSapiens}, and the code should be modified as:
+SANA should be run as \texttt{./saga -dbg -g1 yeast -g2 human}. If \texttt{alignment.txt} were an alignment between SCerevisiae and HSapiens, then SANA should be run as \texttt{./saga -dbg -g1 SCerevisiae -g2 HSapiens}, and the code should be modified as:
 \begin{verbatim}
 void dbgMode(Graph& G1, Graph& G2, ArgumentParser& args) {
   printProteinPairCountInNetworks(true);
